chore: Raise old java api usage for new [DataType]